# basic-binomial-pricer

./: .gitignore  Cargo.toml  README.md  run_tests.sh  test.py
app/: __main__.py
notebooks/: Monte Carlo Simulations.ipynb  Shock Grid Rendering.ipynb
python_tests/: shock_grid.py  simple_black_scholes.py  test_utils.py
src/: black_scholes.rs  black_scholes_greeks.rs  black_scholes_new.rs  build_tree.rs  cli.rs  finite_difference.rs  greeks.rs  lib.rs  main.rs  option.rs  result.rs  risk_factor.rs  risk_free_model.rs  shock.rs  shock_grid.rs  symbol.rs  tests.rs
src/black_scholes/: analytical_greeks.rs  common.rs  finite_difference.rs  inputs.rs  mod.rs  pricing.rs  risk_factors.rs  test.rs  types.rs
src/greeks/: finite_difference.rs  mod.rs  test.rs
src/monte_carlo/: aad_ls.rs  inputs.rs  mod.rs  params.rs  pricing.rs  risk_factors.rs  test.rs  types.rs
src/risk_factors/: discount.rs  dividend.rs  mod.rs  price.rs  volatility.rs
src/shock/: absolute.rs  absolute_time.rs  float_shock.rs  mod.rs  relative.rs  size.rs
src/tree/: build.rs  debug.rs  mod.rs  node.rs  tests.rs
src/utils/: date.rs  mod.rs  test_utils.rs
tests/: risk_free_model.rs  test_shock_grid.py  test_simple_black_scholes.py  test_utils.py
