[package]
name = "basic_pricer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
statrs = "0.16.0"
test-log = "0.2.12"
