[package]
name = "pricer"
version = "0.1.0"
edition = "2021"

[lib]
name = "pricer"
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
statrs = "0.16.0"
test-log = "0.2.12"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
pyo3-log = "0.11.0"
itertools = "0.13.0"
rand = "0.8.5"
rayon = "1.10.0"
